--- a/lab-2-cnns/lab-2-cnns.ipynb
+++ b/lab-2-cnns/lab-2-cnns.ipynb
@@ -384,6 +384,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "echo $PORT "
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
